trunk/Archive2/88/0a72cee6ff58d1/output
main.cpp: In function ‘constexpr bool issix(int)’:
main.cpp:22:35: error: ‘n’ is not a constant expression
     return issix(int_<factorial(n)>());
                                   ^
main.cpp:22:35: note: in template argument for type ‘int’ 
main.cpp:23:1: error: body of constexpr function ‘constexpr bool issix(int)’ not a return-statement
 }
 ^
main.cpp:23:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
